# python-uv-template

./: .gitignore  Dockerfile  LICENSE  README.md  pyproject.toml
src/app/: version.py
